syntax = "proto3";

option csharp_namespace = "Dai19090.DistributedSystems.SigmaBank.Transport.Grpc";

package sigma_bank;

service Bank {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc GetAccountInfo(GetAccountInfoRequest) returns (GetAccountInfoResponse) {}
  rpc Deposit(DepositRequest) returns (DepositResponse) {}
  rpc Withdraw(WithdrawRequest) returns (WithdrawResponse) {}
  rpc Transfer(TransferRequest) returns (TransferResponse) {}
}

message UserInfo {
  int32 user_id = 1;
  string name = 2;
  string surname = 3;
}

message AccountInfo {
  int32 account_id = 1;
  int32 owner_id = 2;
  double balance = 3;
}

message CreateUserRequest {
  string name = 1;
  string surname = 2;
}

message CreateUserResponse {
  UserInfo user = 1;
}

message GetUserInfoRequest {
  int32 user_id = 1;
}

message GetUserInfoResponse {
  oneof user_maybe {
    bool user_null = 1;
    UserInfo user_value = 2;
  }
}

message CreateAccountRequest {
  int32 owner = 1;
}

message CreateAccountResponse {
  AccountInfo account = 1;
}

message GetAccountInfoRequest {
  int32 account_id = 1;
}

message GetAccountInfoResponse {
  oneof account_maybe {
    bool account_null = 1;
    AccountInfo account_value = 2;
  }
}

message DepositRequest {
  int32 account_id = 1;
  double amount = 2;
}

message DepositResponse {
  AccountInfo account = 1;
}

message WithdrawRequest {
  int32 account_id = 1;
  double amount = 2;
}

message WithdrawResponse {
  AccountInfo account = 1;
}

message TransferRequest {
  int32 from_account_id = 1;
  int32 to_account_id = 2;
  double amount = 3;
}

message TransferResponse {
  AccountInfo from_account = 1;
  AccountInfo to_account = 2;
}
